--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <section class="hero">
-    <h1>UI/UX Designer</h1>
+    <h1>UI/UX Designer & Double‑Major Student</h1>
     <p>Bringing clarity and elegance to digital experiences through research‑driven design.</p>
     <div class="cta">
       <a href="portfolio.html">View Portfolio</a>
@@ -28,7 +28,7 @@
   </section>
   <section class="section">
     <h2>Welcome</h2>
-    <p>I'm Edima, a Toronto‑based UI/UX designer inspired by the balance of natural beauty and refined structure found in the work of William Kent. I craft digital experiences that feel both organic and polished.</p>
+    <p>I’m Edima, a Windsor‑based UI/UX designer and second‑year student at the University of Windsor majoring in Business and Computer Science. I thrive on challenges and craft digital experiences that balance nature’s rhythm with refined structure</p>
   </section>
   <footer class="footer">
     &copy; 2025 Edima Essien. All rights reserved.
