--- a/edima_cv.html
+++ b/edima_cv.html
@@ -1,92 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Edima Essien – UI/UX Designer & Business/CS Student</title>
-<style>
-  /* simple typography for clarity */
-  body {
-    font-family: Georgia, serif;
-    max-width: 40em;
-    margin: 2rem auto;
-    line-height: 1.6;
-    color: #1a1a1a;
-  }
-  h1, h2 {
-    margin-top: 1.2em;
-  }
-  ul {
-    list-style: disc;
-    margin-left: 1.5em;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CV | Edima Essien</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="edima_cv.html" class="active">CV</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<h1>Edima Essien – UI/UX Designer & Double Major Student</h1>
+  <!-- Main Content / Resume Section -->
+  <main>
+    <!-- Profile Summary -->
+    <section id="profile">
+      <h1>Edima Essien</h1>
+      <p><strong>Profile:</strong> An adept, versatile student pursuing a double major in Computer Science and Business Administration (University of Windsor, expected 2027). Passionate about UI/UX design, combining strong technical skills with business acumen to create user-centered solutions. Adaptable and quick to learn new concepts, with a proven ability to take on challenges ranging from software development projects to cross-functional team collaborations. Equally comfortable working on code, design prototypes, or business strategy, always bringing a strong work ethic and eagerness to learn.</p>
+    </section>
 
-<h2>Contact</h2>
-<p>
-<strong>Location:</strong> Toronto, ON, Canada<br>
-<strong>Email:</strong> <a href="mailto:essienedima74@gmail.com">essienedima74@gmail.com</a><br>
-<strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/edima-essien-27a938329">linkedin.com/in/edima-essien-27a938329</a>
-</p>
+    <!-- Core Competencies / Skills -->
+    <section id="skills">
+      <h2>Core Competencies</h2>
+      <ul>
+        <li><strong>Adaptability & Quick Learning:</strong> Thrives in new environments and rapidly picks up new tools, frameworks, and concepts.</li>
+        <li><strong>Problem-Solving & Analytical Thinking:</strong> Effective at assessing challenges and devising creative, practical solutions.</li>
+        <li><strong>User-Centered Design & Empathy:</strong> Prioritizes user needs and inclusive design principles in crafting UI/UX solutions.</li>
+        <li><strong>Team Collaboration & Communication:</strong> Excellent team player with clear communication skills in diverse group settings.</li>
+        <li><strong>Business & Marketing Acumen:</strong> Understands business strategy and marketing fundamentals, informing designs that align with business goals and user expectations.</li>
+        <li><strong>Dependability & Organization:</strong> Reliable in meeting commitments and adept at managing time and tasks efficiently.</li>
+      </ul>
 
-<h2>Professional Summary</h2>
-<p>
-I’m a human‑centred designer and second‑year student at the University of Windsor, pursuing a double major in Business and Computer Science. I specialise in translating complex requirements into intuitive interfaces, blending my business acumen with technical proficiency to craft experiences that are both elegant and effective. My adaptability and curiosity push me to tackle challenges head‑on and continually refine my design practice.
-</p>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Programming:</strong> Proficient in Python, Java, and C++; familiar with object-oriented programming, algorithms, and data structures.</li>
+        <li><strong>Web Development:</strong> Experienced with HTML5, CSS3, and basic JavaScript for building and styling web pages and prototypes.</li>
+        <li><strong>UX/UI Design:</strong> Familiar with user-centered design methodologies and tools; basic experience creating wireframes and interactive prototypes (e.g., Figma).</li>
+        <li><strong>Tools & Platforms:</strong> Comfortable with Git/GitHub version control, working in Windows/Linux environments, and using IDEs like VS Code.</li>
+        <li><strong>Productivity:</strong> Proficient in Microsoft Office (Word, Excel, PowerPoint); adept with collaboration tools such as Trello and Slack.</li>
+        <li><strong>Digital Marketing:</strong> Knowledgeable about SEO fundamentals, Google Analytics, and social media strategies for user engagement.</li>
+      </ul>
+    </section>
 
-<h2>Key Skills</h2>
-<ul>
-  <li><strong>Design & Prototyping:</strong> Figma, Adobe XD, Sketch, InVision</li>
-  <li><strong>User Research:</strong> Interviews, surveys, persona creation, usability testing</li>
-  <li><strong>Front‑End Fundamentals:</strong> HTML5, CSS3, JavaScript (basic)</li>
-  <li><strong>Methods:</strong> Wireframing, user flows, storyboarding, A/B testing</li>
-  <li><strong>Soft Skills:</strong> Communication, adaptability, collaboration, time management</li>
-</ul>
+    <!-- Education -->
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>Honours B.Sc. Computer Science & B.Com. Business Administration (Double Major)</strong> – University of Windsor, ON (2024 – Present, Expected May 2027)</li>
+        <li><strong>Associate’s in General Science</strong> – Maple Canadian College, Lagos, NG (2023 – 2024)</li>
+      </ul>
+      <p><em>Relevant Coursework:</em> UX/UI Design, Web Development, Software Engineering, Data Structures & Algorithms, Project Management</p>
+    </section>
 
-<h2>Education</h2>
-<p>
-<strong>Bachelor of Commerce & Bachelor of Computer Science (Double Major)</strong><br>
-University of Windsor – Odette School of Business & School of Computer Science (Expected Graduation 2027)<br>
-Relevant coursework: Human‑Computer Interaction, User‑Centred Design, Data Structures, Marketing, Project Management.
-</p>
+    <!-- Certifications & Professional Development -->
+    <section id="certifications">
+      <h2>Certifications & Professional Development</h2>
+      <ul>
+        <li>Coursera – **Marketing Fundamentals** (Completed 2023)</li>
+        <li>LinkedIn Learning – **Business Management Basics** (Completed 2022)</li>
+        <li>Udemy – **Digital Marketing & Analytics** (Completed 2023)</li>
+      </ul>
+    </section>
 
-<h2>Professional Experience</h2>
-<p><strong>UI/UX Designer – Example Tech Co.</strong><br>
-<em>Jan 2023 – Present, Toronto, ON</em></p>
-<ul>
-  <li>Redesigned a flagship mobile app, improving retention by 25 % and satisfaction scores by 15 %.</li>
-  <li>Conducted research sessions with users and stakeholders to uncover pain points and opportunities.</li>
-  <li>Translated insights into wireframes and high‑fidelity prototypes, iterating based on feedback.</li>
-  <li>Worked with developers and product managers to align designs with technical and business goals.</li>
-</ul>
+    <!-- Experience -->
+    <section id="experience">
+      <h2>Experience</h2>
+      <ul>
+        <li><strong>Warehouse Associate (Seasonal)</strong> – XYZ Logistics, Windsor, ON (Summer 2024): Maintained a safe, organized warehouse and coordinated fast-paced shipping/receiving operations, demonstrating efficiency, teamwork, and reliability.</li>
+        <li><strong>Freelance Computer Support Technician</strong> – Self-Employed, Windsor, ON (2021 – Present): Provide technical support for 20+ clients, diagnosing and resolving computer issues and explaining solutions in user-friendly terms, honing problem-solving and customer communication skills.</li>
+      </ul>
+    </section>
 
-<p><strong>Junior UI/UX Designer – Creative Agency Inc.</strong><br>
-<em>May 2021 – Dec 2022, Toronto, ON</em></p>
-<ul>
-  <li>Supported web and mobile projects, creating wireframes and visual mock‑ups.</li>
-  <li>Assisted with user research, including surveys and usability tests.</li>
-  <li>Collaborated with developers to deliver pixel‑perfect implementations and maintain design consistency.</li>
-  <li>Presented design concepts to clients and incorporated feedback iteratively.</li>
-</ul>
+    <!-- Projects -->
+    <section id="projects">
+      <h2>Projects (Academic & Personal)</h2>
+      <ul>
+        <li><strong>Inventory Management App (2023):</strong> Developed a basic inventory tracking application in Python to simulate managing stock for a small business. This project improved my programming proficiency and provided insight into small-scale supply chain operations.</li>
+        <li><strong>Personal Portfolio Website (2022):</strong> Designed and built my own portfolio website using HTML, CSS, and JavaScript to showcase my work. This enhanced my web development skills and reflects my initiative in continuous learning and design.</li>
+        <li><strong>Task Manager App Redesign (2024):</strong> Completed a UI/UX redesign of a conceptual task management app to enhance its usability and visual clarity. Applied user-centered design principles and considered technical constraints to produce a more intuitive interface.</li>
+        <li><strong>CampusHub Hackathon Project (2025):</strong> Co-led the design of a mobile-first student engagement platform in a 48-hour hackathon. Focused on a simple, intuitive user experience — our team’s prototype won an award for **Best UX** for its clarity and ease of use.</li>
+      </ul>
+    </section>
 
-<h2>Additional Projects & Leadership</h2>
-<ul>
-  <li><strong>Student Innovation Lab (University of Windsor)</strong> – leading UI/UX for an on‑campus app that improves student engagement and access to resources.</li>
-  <li><strong>Volunteer Mentor:</strong> Mentor first‑year students on balancing business and technical coursework while pursuing creative projects.</li>
-  <li><strong>Hackathon Participant:</strong> Designed and prototyped an app for sustainable living, receiving a team award for innovation.</li>
-</ul>
-
-<h2>Additional Information</h2>
-<ul>
-  <li>Fluent in English; conversational in French.</li>
-  <li>Comfortable working remotely or on‑site.</li>
-  <li>Excited to bring multidisciplinary insights to UI/UX roles, including at GAO Tek.</li>
-</ul>
-
+    <!-- Volunteer Work -->
+    <section id="volunteer">
+      <h2>Volunteer Work</h2>
+      <ul>
+        <li><strong>Student Union Info Desk Volunteer</strong> – University of Windsor (Sept 2023 – Present): Serve as a first point of contact for students and visitors, handling ~80 inquiries per shift and refining communication and customer-service skills.</li>
+        <li><strong>Community Coding Mentor</strong> – Windsor Public Library “Code Club” (Jan 2023 – Aug 2023): Taught weekly coding workshops to youth (ages 11–14); boosted participants’ project completion rate from 60% to 90% by introducing interactive challenges and peer review sessions.</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
-
