--- a/portfolio.html
+++ b/portfolio.html
@@ -1,79 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | Edima Essien</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Navigation -->
   <header>
     <nav>
-      <a href="index.html" class="logo">Edima Essien</a>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html" class="active">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="edima_cv.html">CV</a></li>
       </ul>
     </nav>
   </header>
-  <section class="section">
-    <h2>Portfolio</h2>
-    <div class="card">
-      <h3>Mobile Banking App Redesign</h3>
-      <p><strong>The challenge:</strong> Customers were struggling with a dated mobile banking app that made routine transactions cumbersome.</p>
-      <p><strong>My role:</strong> Lead UI/UX designer responsible for research, wireframing, prototyping, and testing.</p>
-      <p><strong>What I did:</strong></p>
-      <ul>
-        <li>Interviewed users and stakeholders to understand pain points and define success metrics.</li>
-        <li>Designed a simplified navigation structure and cleaner visual language.</li>
-        <li>Developed interactive prototypes in Figma and ran usability tests to validate design decisions.</li>
-      </ul>
-      <p><strong>Result:</strong> A streamlined app that improved task completion rates by 30% and reduced support calls.</p>
-    </div>
 
-    <div class="card">
-      <h3>E‑Commerce Checkout Optimisation</h3>
-      <p><strong>The challenge:</strong> A clothing retailer faced high cart abandonment rates on mobile.</p>
-      <p><strong>My role:</strong> UI/UX designer supporting a cross‑functional team.</p>
-      <p><strong>What I did:</strong></p>
-      <ul>
-        <li>Analysed analytics to identify friction points in the checkout flow.</li>
-        <li>Facilitated workshops to ideate solutions and prioritise improvements.</li>
-        <li>Simplified the checkout process, introduced progress indicators, and tested variations via A/B tests.</li>
-      </ul>
-      <p><strong>Result:</strong> Checkout time decreased by 40%, and mobile conversions increased by 18%.</p>
-    </div>
+  <!-- Main Content -->
+  <main>
+    <h1>Portfolio</h1>
+    <p>Welcome to my portfolio! The projects below showcase my ability to **quickly learn new domains** and **adapt** to different industry challenges. From academic projects to hackathon prototypes, each case study highlights how I apply core UI/UX principles in diverse contexts.</p>
 
-    <div class="card">
-      <h3>Health & Wellness Platform Design System</h3>
-      <p><strong>The challenge:</strong> A startup needed a scalable design system for its health‑tracking web and mobile apps.</p>
-      <p><strong>My role:</strong> UI/UX designer building a consistent visual language.</p>
-      <p><strong>What I did:</strong></p>
-      <ul>
-        <li>Defined foundational elements: colours, typography, iconography, and component styles.</li>
-        <li>Created reusable UI components and documented guidelines for usage and accessibility.</li>
-        <li>Worked with developers to implement the system and ensure fidelity across platforms.</li>
-      </ul>
-      <p><strong>Result:</strong> Accelerated development cycles and ensured consistency across all products.</p>
-    </div>
+    <div class="portfolio-projects">
+      <!-- Case Study 1 (unchanged) -->
+      <div class="project-card">
+        <h3>Inventory Management App (2023)</h3>
+        <p>A Python-based inventory tracking application built as a personal project to help a small business manage stock. This project improved my programming skills and provided insight into supply chain operations.</p>
+      </div>
 
-    <div class="card">
-      <h3>Smart Home Dashboard</h3>
-      <p><strong>The challenge:</strong> Designing an intuitive interface for controlling home devices from a single dashboard.</p>
-      <p><strong>My role:</strong> UI/UX designer focusing on user flows and visual design.</p>
-      <p><strong>What I did:</strong></p>
-      <ul>
-        <li>Conducted card‑sorting to prioritise features and understand how users group tasks.</li>
-        <li>Designed a modular dashboard with customizable widgets and a dark mode option.</li>
-        <li>Performed heuristic evaluations and iterated to address feedback.</li>
-      </ul>
-      <p><strong>Result:</strong> High usability scores and positive feedback on customisation options and clarity.</p>
+      <!-- Case Study 2 (unchanged) -->
+      <div class="project-card">
+        <h3>Personal Portfolio Website (2022)</h3>
+        <p>Designed and developed my own portfolio site using HTML, CSS, and JavaScript to showcase projects and skills. This work sharpened my web design abilities and demonstrates my initiative in continuous learning.</p>
+      </div>
+
+      <!-- Case Study 3 (unchanged) -->
+      <div class="project-card">
+        <h3>Task Manager App Redesign (2024)</h3>
+        <p>Conducted a complete UI/UX overhaul of a conceptual task-tracking mobile app to improve usability. Balanced user needs with technical feasibility to deliver a more intuitive and visually clean interface.</p>
+      </div>
+
+      <!-- Case Study 4 (unchanged) -->
+      <div class="project-card">
+        <h3>ShopEasy E-Commerce UI (Concept)</h3>
+        <p>Created a user-friendly e-commerce app interface focusing on a streamlined shopping and checkout experience. Emphasized clarity and ease-of-use to help reduce cart abandonment and improve customer satisfaction.</p>
+      </div>
+
+      <!-- New Case Study 5: CampusHub (Hackathon Project) -->
+      <div class="project-card">
+        <h3>CampusHub (2025)</h3>
+        <p>A mobile-first student engagement platform built in 48 hours during a university hackathon – winner of a team award for **UX simplicity**. This project required rapid learning and iteration, resulting in an intuitive interface that connected students efficiently.</p>
+      </div>
     </div>
-  </section>
-  <footer class="footer">
-    &copy; 2025 Edima Essien. All rights reserved.
-  </footer>
+  </main>
 </body>
 </html>
+
