--- a/about.html
+++ b/about.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Edima Essien</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Navigation -->
   <header>
     <nav>
-      <a href="index.html" class="logo">Edima Essien</a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="edima_cv.html">CV</a></li>
       </ul>
     </nav>
   </header>
-  <section class="section">
-    <h2>About Me</h2>
-    <p>I’m a UI/UX designer who enjoys turning complex problems into intuitive digital experiences. My work is informed by user research and driven by a love of aesthetics inspired by the classical elegance and natural beauty of William Kent’s designs. When I’m not designing, you can find me exploring Toronto’s art galleries or sketching in the park.</p>
-    <h3>Education</h3>
-    <p><strong>Bachelor of Design (B.Des.), Interaction Design</strong><br>University of Toronto – Faculty of Design, 2021</p>
-    <h3>Experience Highlights</h3>
-    <ul>
-      <li>Redesigned a flagship mobile app for Example Tech Co., improving retention and satisfaction.</li>
-      <li>Optimised e‑commerce checkout flows to boost conversions for a fashion retailer.</li>
-      <li>Developed a scalable design system for a health & wellness platform.</li>
-    </ul>
-    <h3>Download CV</h3>
-    <p>You can read my full CV here: <a href="edima_cv.html">Edima Essien – CV</a>.</p>
-  </section>
-  <footer class="footer">
-    &copy; 2025 Edima Essien. All rights reserved.
-  </footer>
+
+  <!-- Main Content -->
+  <main>
+    <!-- About Me Section -->
+    <section id="about-me">
+      <h1>About Me</h1>
+      <p>I'm a **double major in Business Administration and Computer Science** at the University of Windsor (expected graduation 2027). This cross-disciplinary background makes me highly adaptable and fuels my passion for **UI/UX design**. By blending technical skills with business acumen, I approach design challenges holistically &mdash; balancing user needs with technical feasibility and business goals to create meaningful user experiences.</p>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>Honours Double Major in Computer Science & Business Administration</strong> – University of Windsor, Windsor, ON (2024 – Present, Expected 2027)</li>
+        <li><strong>Associate’s in General Science</strong> – Maple Canadian College, Lagos, NG (Sep 2023 – Jun 2024)</li>
+      </ul>
+    </section>
+
+    <!-- Experience Highlights Section -->
+    <section id="experience-highlights">
+      <h2>Experience Highlights</h2>
+      <ul>
+        <li>**Redesigned a mobile app interface** to improve user experience while collaborating with developers to ensure technical feasibility, demonstrating adaptability in balancing user needs with engineering constraints.</li>
+        <li>Quickly learns new tools and domains, as shown by successful projects ranging from a small business inventory system to a campus social app, adapting design approaches to each industry’s needs.</li>
+        <li>Bridges technical and creative teams effectively, leveraging a background in coding and business to communicate design ideas and constraints across disciplines.</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
