--- a/edima_cv.html
+++ b/edima_cv.html
@@ -5,6 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CV | Edima Essien</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Add a soft, neutral page background */
+    body {
+      background-color: #f9f5f0; /* matches the natural, off-white tones used elsewhere on the site */
+      font-family: Georgia, serif;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Wrap the CV content in a card-like container */
+    main {
+      background-color: #ffffff;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    h1, h2 {
+      margin-top: 1.5rem;
+    }
+
+    ul {
+      margin-left: 1.5rem;
+    }
+
+    /* Make sure the navigation links display consistently */
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
+    }
+
+    nav a.active {
+      border-bottom: 2px solid #333;
+    }
+
+    /* Reduce excessive spacing under list items */
+    li {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
@@ -65,9 +117,9 @@
     <section id="certifications">
       <h2>Certifications & Professional Development</h2>
       <ul>
-        <li>Coursera – **Marketing Fundamentals** (Completed 2023)</li>
-        <li>LinkedIn Learning – **Business Management Basics** (Completed 2022)</li>
-        <li>Udemy – **Digital Marketing & Analytics** (Completed 2023)</li>
+        <li>Coursera – <strong>Marketing Fundamentals</strong> (Completed 2023)</li>
+        <li>LinkedIn Learning – <strong>Business Management Basics</strong> (Completed 2022)</li>
+        <li>Udemy – <strong>Digital Marketing & Analytics</strong> (Completed 2023)</li>
       </ul>
     </section>
 
@@ -87,7 +139,7 @@
         <li><strong>Inventory Management App (2023):</strong> Developed a basic inventory tracking application in Python to simulate managing stock for a small business. This project improved my programming proficiency and provided insight into small-scale supply chain operations.</li>
         <li><strong>Personal Portfolio Website (2022):</strong> Designed and built my own portfolio website using HTML, CSS, and JavaScript to showcase my work. This enhanced my web development skills and reflects my initiative in continuous learning and design.</li>
         <li><strong>Task Manager App Redesign (2024):</strong> Completed a UI/UX redesign of a conceptual task management app to enhance its usability and visual clarity. Applied user-centered design principles and considered technical constraints to produce a more intuitive interface.</li>
-        <li><strong>CampusHub Hackathon Project (2025):</strong> Co-led the design of a mobile-first student engagement platform in a 48-hour hackathon. Focused on a simple, intuitive user experience — our team’s prototype won an award for **Best UX** for its clarity and ease of use.</li>
+        <li><strong>CampusHub Hackathon Project (2025):</strong> Co-led the design of a mobile-first student engagement platform in a 48-hour hackathon. Focused on a simple, intuitive user experience — our team’s prototype won an award for <strong>Best UX</strong> for its clarity and ease of use.</li>
       </ul>
     </section>
 
