--- a/about.html
+++ b/about.html
@@ -5,6 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Edima Essien</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Soft off-white background for entire page */
+    body {
+      background-color: #f9f5f0;
+      font-family: Georgia, serif;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Center the main content in a card-like container */
+    main {
+      background-color: #ffffff;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Basic navigation styling consistent with other pages */
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
+    }
+
+    nav a.active {
+      border-bottom: 2px solid #333;
+    }
+
+    /* Remove extra spacing on list items */
+    li {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
@@ -25,7 +69,7 @@
     <!-- About Me Section -->
     <section id="about-me">
       <h1>About Me</h1>
-      <p>I'm a **double major in Business Administration and Computer Science** at the University of Windsor (expected graduation 2027). This cross-disciplinary background makes me highly adaptable and fuels my passion for **UI/UX design**. By blending technical skills with business acumen, I approach design challenges holistically &mdash; balancing user needs with technical feasibility and business goals to create meaningful user experiences.</p>
+      <p>I'm a <strong>double major in Business Administration and Computer Science</strong> at the University of Windsor (expected graduation 2027). This cross-disciplinary background makes me highly adaptable and fuels my passion for <strong>UI/UX design</strong>. By blending technical skills with business acumen, I approach design challenges holistically — balancing user needs with technical feasibility and business goals to create meaningful user experiences.</p>
     </section>
 
     <!-- Education Section -->
@@ -41,7 +85,7 @@
     <section id="experience-highlights">
       <h2>Experience Highlights</h2>
       <ul>
-        <li>**Redesigned a mobile app interface** to improve user experience while collaborating with developers to ensure technical feasibility, demonstrating adaptability in balancing user needs with engineering constraints.</li>
+        <li><strong>Redesigned a mobile app interface</strong> to improve user experience while collaborating with developers to ensure technical feasibility, demonstrating adaptability in balancing user needs with engineering constraints.</li>
         <li>Quickly learns new tools and domains, as shown by successful projects ranging from a small business inventory system to a campus social app, adapting design approaches to each industry’s needs.</li>
         <li>Bridges technical and creative teams effectively, leveraging a background in coding and business to communicate design ideas and constraints across disciplines.</li>
       </ul>
