--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Basic navigation styling consistent with other pages */
+    /* Navigation styling consistent with other pages */
     nav ul {
       list-style: none;
       padding: 0;
