--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | Edima Essien</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Soft off-white background for entire page */
+    body {
+      background-color: #f9f5f0;
+      font-family: Georgia, serif;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Center the main content in a card-like container */
+    main {
+      background-color: #ffffff;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Navigation styling consistent with other pages */
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
+    }
+
+    nav a.active {
+      border-bottom: 2px solid #333;
+    }
+
+    /* Remove extra spacing on list items */
+    li {
+      margin-bottom: 0.5rem;
+    }
+
+    /* Give headings some breathing room */
+    h1, h2, h3 {
+      margin-top: 1.4rem;
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
@@ -23,40 +72,37 @@
   <!-- Main Content -->
   <main>
     <h1>Portfolio</h1>
-    <p>Welcome to my portfolio! The projects below showcase my ability to **quickly learn new domains** and **adapt** to different industry challenges. From academic projects to hackathon prototypes, each case study highlights how I apply core UI/UX principles in diverse contexts.</p>
+    <p>Welcome to my portfolio! The projects below showcase my ability to <strong>quickly learn new domains</strong> and <strong>adapt</strong> to different industry challenges. From academic projects to hackathon prototypes, each case study highlights how I apply core UI/UX principles in diverse contexts.</p>
 
-    <div class="portfolio-projects">
-      <!-- Case Study 1 (unchanged) -->
-      <div class="project-card">
-        <h3>Inventory Management App (2023)</h3>
-        <p>A Python-based inventory tracking application built as a personal project to help a small business manage stock. This project improved my programming skills and provided insight into supply chain operations.</p>
-      </div>
+    <!-- Project 1 -->
+    <section>
+      <h3>Inventory Management App (2023)</h3>
+      <p>A Python-based inventory tracking application built as a personal project to help a small business manage stock. This project improved my programming skills and provided insight into supply chain operations.</p>
+    </section>
 
-      <!-- Case Study 2 (unchanged) -->
-      <div class="project-card">
-        <h3>Personal Portfolio Website (2022)</h3>
-        <p>Designed and developed my own portfolio site using HTML, CSS, and JavaScript to showcase projects and skills. This work sharpened my web design abilities and demonstrates my initiative in continuous learning.</p>
-      </div>
+    <!-- Project 2 -->
+    <section>
+      <h3>Personal Portfolio Website (2022)</h3>
+      <p>Designed and developed my own portfolio site using HTML, CSS, and JavaScript to showcase projects and skills. This work sharpened my web design abilities and demonstrates my initiative in continuous learning.</p>
+    </section>
 
-      <!-- Case Study 3 (unchanged) -->
-      <div class="project-card">
-        <h3>Task Manager App Redesign (2024)</h3>
-        <p>Conducted a complete UI/UX overhaul of a conceptual task-tracking mobile app to improve usability. Balanced user needs with technical feasibility to deliver a more intuitive and visually clean interface.</p>
-      </div>
+    <!-- Project 3 -->
+    <section>
+      <h3>Task Manager App Redesign (2024)</h3>
+      <p>Conducted a complete UI/UX overhaul of a conceptual task-tracking mobile app to improve usability. Balanced user needs with technical feasibility to deliver a more intuitive and visually clean interface.</p>
+    </section>
 
-      <!-- Case Study 4 (unchanged) -->
-      <div class="project-card">
-        <h3>ShopEasy E-Commerce UI (Concept)</h3>
-        <p>Created a user-friendly e-commerce app interface focusing on a streamlined shopping and checkout experience. Emphasized clarity and ease-of-use to help reduce cart abandonment and improve customer satisfaction.</p>
-      </div>
+    <!-- Project 4 -->
+    <section>
+      <h3>ShopEasy E-Commerce UI (Concept)</h3>
+      <p>Created a user-friendly e-commerce app interface focusing on a streamlined shopping and checkout experience. Emphasized clarity and ease-of-use to help reduce cart abandonment and improve customer satisfaction.</p>
+    </section>
 
-      <!-- New Case Study 5: CampusHub (Hackathon Project) -->
-      <div class="project-card">
-        <h3>CampusHub (2025)</h3>
-        <p>A mobile-first student engagement platform built in 48 hours during a university hackathon – winner of a team award for **UX simplicity**. This project required rapid learning and iteration, resulting in an intuitive interface that connected students efficiently.</p>
-      </div>
-    </div>
+    <!-- Project 5 -->
+    <section>
+      <h3>CampusHub (2025)</h3>
+      <p>A mobile-first student engagement platform built in 48 hours during a university hackathon – winner of a team award for <strong>UX simplicity</strong>. This project required rapid learning and iteration, resulting in an intuitive interface that connected students efficiently.</p>
+    </section>
   </main>
 </body>
 </html>
-
